src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-23.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"--- foo\")"
---
- token: directives_end
  stream: "---"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  stream: " "
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- value:
    explicit: true
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 7
      line: 0
      column: 7

