src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-26.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \" ---foo\")"
---
- token: indent
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- value:
    version: ~
    tags: {}
- remainder: "---foo"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 7
      line: 0
      column: 7

