src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-27.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \" ---\\nfoo\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- value:
    explicit: false
    version: ~
    tags: {}
- remainder: "---\nfoo"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 8
      line: 1
      column: 3

